--- a/proyecto_de_nutricion.ipynb
+++ b/proyecto_de_nutricion.ipynb
@@ -15,15 +15,15 @@
       "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "background_save": true
         },
         "id": "_dvtXXS66gJQ",
-        "outputId": "a567f696-f7ce-4c79-be7a-27001d963d1d"
+        "outputId": "6fcd3ed2-c614-421c-f978-f6326d6368d3"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting openai==0.28\n",
             "  Downloading openai-0.28.0-py3-none-any.whl.metadata (13 kB)\n",
@@ -42,7 +42,7 @@
             "Requirement already satisfied: yarl<2.0,>=1.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai==0.28) (1.9.4)\n",
             "Requirement already satisfied: async-timeout<5.0,>=4.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->openai==0.28) (4.0.3)\n",
             "Downloading openai-0.28.0-py3-none-any.whl (76 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.5/76.5 kB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/76.5 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.5/76.5 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: openai\n",
             "Successfully installed openai-0.28.0\n",
             "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (2.32.3)\n",
@@ -63,6 +63,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "colab": {
+          "background_save": true
+        },
         "id": "5DBUJjj1Tq0q"
       },
       "outputs": [],
@@ -72,6 +75,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "colab": {
+          "background_save": true
+        },
         "id": "T1M1kxOX62OP"
       },
       "outputs": [],
@@ -86,8 +92,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
+        "colab": {
+          "background_save": true
+        },
         "id": "PBHg19wnw7lT"
       },
       "outputs": [],
@@ -97,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "QM8_vf9q9Scr"
       },
@@ -111,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "-tQkQIjyBa-G"
       },
@@ -139,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "rFFeH1A-Icmd"
       },
@@ -150,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "n2UMuVf6GadS"
       },
@@ -161,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "LG43AG_mBgH1"
       },
@@ -200,7 +209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "Y8fS7Irzv3nv"
       },
@@ -221,21 +230,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QwSYVhsZwEWw",
-        "outputId": "8815deca-2973-457c-85f8-e89570089da4"
+        "outputId": "69a80890-8383-46c5-b039-825cd3eb1de5"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "La imagen ha sido descargada y almacenada correctamente en: ./generated_images/ShvnMZzNYMZxBAwhdLqINNCDjDJbALE%3D.png\n",
-            "Prompt utilizado: Tu prompt aquí\n"
+            "Error al generar la imagen: No API key provided. You can set your API key in code using 'openai.api_key = <API-KEY>', or you can set the environment variable OPENAI_API_KEY=<API-KEY>). If your API key is stored in a file, you can point the openai module at it with 'openai.api_key_path = <PATH>'. You can generate API keys in the OpenAI web interface. See https://platform.openai.com/account/api-keys for details.\n"
           ]
         }
       ],
@@ -285,14 +293,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 104
         },
         "id": "7QibOm-RIgjV",
-        "outputId": "3df054df-e786-40d0-a7ea-2bb056fc2734"
+        "outputId": "8160b49c-e094-4f28-dc86-3ed299ed8128"
       },
       "outputs": [
         {
@@ -301,133 +309,8 @@
           "text": [
             "Soy Yanina, la nutricionista. Pídeme consejos de nutrición. Escribe 'salir' para terminar.\n",
             "Tú: hola\n",
-            "Yanina: ¡Hola! 👋 ¿Cómo estás? 😊  ¿Hay algo en lo que pueda ayudarte hoy? \n",
+            "Yanina: ¡Hola! 👋 ¿Qué te trae por aquí hoy? 😊 ¿Tienes alguna duda o necesitas alguna recomendación sobre nutrición? Estoy aquí para ayudarte a mejorar tu salud a través de la alimentación. \n",
             "\n",
-            "Tú: si quiero entreenar y quiero ganar masa muscular\n",
-            "Yanina: ¡Excelente! ¡Ganar masa muscular es un objetivo genial! 💪 Para ayudarte a alcanzarlo, necesito saber un poco más sobre ti:\n",
-            "\n",
-            "* **¿Cuál es tu nivel de experiencia con el entrenamiento?** ¿Eres principiante, intermedio o avanzado?\n",
-            "* **¿Qué tipo de entrenamiento te gusta o te gustaría probar?** ¿Pesas, calistenia, entrenamiento funcional, etc.?\n",
-            "* **¿Tienes alguna lesión o limitación física que deba considerar?** \n",
-            "\n",
-            "Con esta información, puedo darte consejos más específicos sobre cómo entrenar para ganar masa muscular de forma segura y efectiva.  \n",
-            "\n",
-            "Por ahora, te puedo decir que para ganar masa muscular necesitas:\n",
-            "\n",
-            "1. **Un programa de entrenamiento adecuado:**  Elige un programa de entrenamiento que sea desafiante para ti y que se centre en ejercicios compuestos que trabajen varios grupos musculares al mismo tiempo. \n",
-            "2. **Una dieta adecuada:**  Asegúrate de consumir suficientes proteínas para ayudar a tus músculos a recuperarse y crecer. \n",
-            "3. **Descanso suficiente:**  Tu cuerpo necesita tiempo para recuperarse del entrenamiento. Duerme al menos 7-8 horas por noche.\n",
-            "\n",
-            "¿Qué te parece? ¿Puedes contarme un poco más sobre tus objetivos de entrenamiento? 😄 \n",
-            "\n",
-            "Tú: peso 69 kg y mido 1.69\n",
-            "Yanina: ¡Genial! Con esa información, puedo darte consejos aún más personalizados.\n",
-            "\n",
-            "Para empezar, es importante destacar que ganar masa muscular no se trata solo de levantar mucho peso. Se trata de entrenar de forma inteligente y constante para estimular el crecimiento muscular.\n",
-            "\n",
-            "**Aquí te dejo algunas ideas generales para empezar a entrenar y ganar masa muscular, teniendo en cuenta tu peso y altura:**\n",
-            "\n",
-            "**Programa de entrenamiento:**\n",
-            "\n",
-            "* **Elige ejercicios compuestos:**  Estos ejercicios trabajan varios grupos musculares al mismo tiempo. Algunos ejemplos son: sentadillas, press de banca, dominadas, remo con barra, peso muerto.\n",
-            "* **Empieza con un programa de 3 días a la semana:**  Puedes entrenar diferentes grupos musculares cada día, como piernas, pecho y hombros, espalda y brazos.\n",
-            "* **Haz 3-4 series de 8-12 repeticiones por ejercicio.**  \n",
-            "* **Concéntrate en la técnica:**  Es más importante hacer los ejercicios correctamente que levantar mucho peso.\n",
-            "* **Aumenta gradualmente el peso o la dificultad de los ejercicios:**  Cuando te sientas cómodo con el peso que estás levantando, puedes aumentar gradualmente la carga. \n",
-            "\n",
-            "**Dieta:**\n",
-            "\n",
-            "* **Consume suficiente proteína:**  Tu objetivo debe ser consumir entre 1.6 y 2.2 gramos de proteína por kilogramo de peso corporal al día. \n",
-            "* **Elige alimentos ricos en proteínas:**  Carne magra, pescado, huevos, legumbres, productos lácteos.\n",
-            "* **Hidrátate bien:**  Bebe mucha agua a lo largo del día.\n",
-            "\n",
-            "**Descanso:**\n",
-            "\n",
-            "* **Duerme al menos 7-8 horas por noche:**  El descanso es crucial para la recuperación muscular.\n",
-            "* **Toma días de descanso entre sesiones de entrenamiento:**  Permite que tus músculos se recuperen.\n",
-            "\n",
-            "**Recuerda:**\n",
-            "\n",
-            "* Es importante que comiences con un programa de entrenamiento que sea desafiante para ti, pero no demasiado intenso.  \n",
-            "* Presta atención a tu cuerpo y a las señales que te da.  \n",
-            "* Si tienes alguna duda o lesión, consulta con un entrenador personal o un profesional de la salud. \n",
-            "\n",
-            "¿Te gustaría que te diera ejemplos concretos de rutinas de entrenamiento para empezar?  😊\n",
-            "\n",
-            "\n",
-            "\n",
-            "Tú: si\n",
-            "Yanina: ¡Claro que sí! Aquí te dejo un ejemplo de rutina de entrenamiento para ganar masa muscular,  teniendo en cuenta que eres principiante y quieres entrenar 3 días a la semana:\n",
-            "\n",
-            "**Día 1: Piernas y Glúteos**\n",
-            "\n",
-            "* Sentadillas: 3 series de 8-12 repeticiones. \n",
-            "* Peso muerto rumano: 3 series de 8-12 repeticiones. \n",
-            "* Zancadas: 3 series de 10-12 repeticiones por pierna. \n",
-            "* Elevaciones de pantorrillas: 3 series de 15-20 repeticiones. \n",
-            "\n",
-            "**Día 2: Pecho y Hombros**\n",
-            "\n",
-            "* Press de banca: 3 series de 8-12 repeticiones. \n",
-            "* Press de hombros: 3 series de 8-12 repeticiones. \n",
-            "* Aperturas con mancuernas: 3 series de 10-12 repeticiones. \n",
-            "* Flexiones: 3 series de 10-12 repeticiones. \n",
-            "\n",
-            "**Día 3: Espalda y Brazos**\n",
-            "\n",
-            "* Remo con barra: 3 series de 8-12 repeticiones. \n",
-            "* Dominadas: 3 series de máximo de repeticiones (si no puedes hacer dominadas, prueba con dominadas asistidas). \n",
-            "* Curl de bíceps: 3 series de 10-12 repeticiones.\n",
-            "* Extensiones de tríceps: 3 series de 10-12 repeticiones. \n",
-            "\n",
-            "**Consejos:**\n",
-            "\n",
-            "* **Comienza con un peso ligero:**  Asegúrate de que puedas hacer todas las repeticiones con una buena técnica. \n",
-            "* **Aumenta el peso gradualmente:**  Cuando te sientas cómodo con el peso que estás levantando, puedes aumentarlo. \n",
-            "* **Descansa al menos 60 segundos entre series:**  Esto te permitirá recuperarte para la siguiente serie.\n",
-            "* **Calienta antes de cada entrenamiento:**  Haz 5-10 minutos de cardio ligero y algunos ejercicios de movilidad.\n",
-            "* **Estira después de cada entrenamiento:**  Esto te ayudará a prevenir lesiones y a mejorar la flexibilidad.\n",
-            "\n",
-            "**Recuerda:** \n",
-            "\n",
-            "* Esta es solo una sugerencia de rutina. Puedes ajustarla según tus preferencias y necesidades.\n",
-            "* Es importante que consultes con un profesional de\n",
-            "Tú: a bueno\n",
-            "Yanina: ¡Me alegra que te haya gustado la rutina! 😄 \n",
-            "\n",
-            "¿Tienes alguna duda sobre los ejercicios o quieres que te explique algo en específico? \n",
-            "\n",
-            "También puedo darte más ideas sobre ejercicios para cada grupo muscular si necesitas alternativas. \n",
-            "\n",
-            "¡Estoy aquí para ayudarte a que tu entrenamiento sea exitoso! 💪 \n",
-            "\n",
-            "\n",
-            "\n",
-            "Tú: sabes como cambiar una llanta al auto\n",
-            "Yanina: ¡Claro que sí! Cambiar una llanta es una tarea que puede parecer complicada, pero con los pasos correctos, es bastante sencillo. Aquí te dejo una guía paso a paso:\n",
-            "\n",
-            "**Materiales:**\n",
-            "\n",
-            "* Gato hidráulico\n",
-            "* Llave de tuercas\n",
-            "* Llanta de repuesto\n",
-            "* Cuñas\n",
-            "* Guantes (opcional)\n",
-            "\n",
-            "**Pasos:**\n",
-            "\n",
-            "1. **Encuentra un lugar seguro:**  Busca un lugar plano y nivelado para estacionar tu auto. Asegúrate de que el auto esté en una superficie firme y no en una pendiente.\n",
-            "2. **Activa las luces de emergencia:**  Esto alertará a otros conductores de que estás detenido a un lado del camino.\n",
-            "3. **Activa el freno de mano:**  Asegúrate de que el freno de mano esté puesto para evitar que el auto se mueva. \n",
-            "4. **Coloca las cuñas:**  Coloca las cuñas detrás de las llantas del lado opuesto a la que vas a cambiar para evitar que el auto se mueva.\n",
-            "5. **Afloja las tuercas:**  Utiliza la llave de tuercas para aflojar las tuercas de la llanta que vas a cambiar. No las quites completamente, solo aflójalas un poco.\n",
-            "6. **Levanta el auto con el gato:**  Coloca el gato hidráulico en el punto de apoyo indicado para el modelo de tu auto.  Estos puntos suelen estar marcados en el marco del vehículo. Levanta el auto hasta que la llanta esté lo suficientemente alta para que puedas retirar la llanta pinchada.\n",
-            "7. **Retira las tuercas:**  Retira las tuercas restantes de la llanta pinchada.\n",
-            "8. **Retira la llanta:**  Retira la llanta pinchada del auto. \n",
-            "9. **Coloca la llanta de repuesto:**  Coloca la llanta de repuesto en el buje del auto. Asegúrate de que la llanta esté bien centrada.\n",
-            "10. **Asegura la llanta:**  Asegura la llanta de repuesto con las tuercas. \n",
-            "11. **Baja el auto:**  Baja el auto con el gato hidráulico hasta que la llanta de repuesto esté en contacto con el suelo.\n",
-            "12. **Aprieta las tuercas:**  Aprieta las tuercas con la llave de tuercas\n",
             "Tú: salir\n"
           ]
         }
